attempt at fixing overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -23,10 +23,6 @@ body {
   width: 100%;
 }
 
-main {
-  overflow-x: hidden;
-}
-
 nav {
   display: flex;
   justify-content: space-between;
@@ -82,6 +78,13 @@ p {
   top: calc(var(--index) * 15);
   padding-left: calc(var(--index) * 3);
 }
+
+.hide-overflow {
+  width: 100vw;
+  position: absolute;
+  height: 100vh;
+  overflow-x: hidden;
+}
 .hero-sphere {
   width: calc(var(--index) * 40);
   position: absolute;
@@ -108,6 +111,7 @@ p {
   top: calc(var(--index) * 32.5);
   padding-left: calc(var(--index) * 4);
   font-size: 32px;
+  cursor: pointer;
 }
 
 .hero {
@@ -253,7 +257,7 @@ p {
 
 .projects-main {
   position: relative;
-  top: calc(var(--index) * 48);
+  top: calc(var(--index) * 45);
   width: 100%;
   padding: 0 calc(var(--index) * 5);
 }
@@ -386,7 +390,7 @@ p {
 
 @media screen and (max-width: 600px) {
   .projects-main {
-    top: calc(var(--index) * 93);
+    top: calc(var(--index) * 85);
   }
   .projects-gallery {
     flex-direction: column;
